force-app/main/default/objects/maps__TPUnitAssignment__c/maps__TPUnitAssignment__c.object-meta.xml
<CustomObject>
    <label>Territory Planning Unit Assignment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Planning Unit Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>