force-app/main/default/objects/maps__TPUnitAssignment__c/fields/maps__AggregateUnits1__c.field-meta.xml
<CustomField>
    <fullName>maps__AggregateUnits1__c</fullName>
    <label>Aggregate Units 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>