force-app/main/default/objects/maps__TPUnitAssignment__c/fields/maps__AlignmentId__c.field-meta.xml
<CustomField>
    <fullName>maps__AlignmentId__c</fullName>
    <description>Text Id that can point to a Data Set or Alignment</description>
    <label>AlignmentId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>