force-app/main/default/objects/maps__TPUnitAssignment__c/fields/maps__ContainerId__c.field-meta.xml
<CustomField>
    <fullName>maps__ContainerId__c</fullName>
    <description>Text Id that points to an external container</description>
    <label>ContainerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>