force-app/main/default/objects/maps__TPUnitAssignment__c/fields/maps__Location__c.field-meta.xml
<CustomField>
    <fullName>maps__Location__c</fullName>
    <label>Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>