force-app/main/default/objects/maps__TPUnitAssignment__c/fields/maps__UnitId__c.field-meta.xml
<CustomField>
    <fullName>maps__UnitId__c</fullName>
    <description>Text Id that can point to any record</description>
    <label>UnitId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>